--- a/Poll_app/Poll_app.csproj
+++ b/Poll_app/Poll_app.csproj
@@ -5,4 +5,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Poll_app.Business.Logic\Poll_app.Business.Logic.csproj" />
+  </ItemGroup>
+
 </Project>
