--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ bld/
 [Ll]og/
 
 # Visual Studio 2015/2017 cache/options directory
-Poll_app_v1.0/.vs/
+/Poll_app_v1.0/.vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
